--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"aslpwdsa":"dsadsa","privacy":"https://byeeimcht.com/pages/tabbar/mine","sloolwmen":"dsads"}
+{"aslpwdsa":null,"privacy":null,"sloolwmen":null}
