--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"aslpwdsa":null,"privacy":null,"sloolwmen":null}
+{"aslpwdsa":"dsadwe","privacy":"https://byeeimcht.com/pages/tabbar/mine","sloolwmen":"dsawewq"}
